Conatct with Me Added

--- a/index.html
+++ b/index.html
@@ -82,8 +82,35 @@
 
 </section>
 
+<section class="contact">
+    <h1 style="text-align: center;" class="orange_color">Contact With Me </h1>
+<div class="contact_div">
 
+<div class="contact_item">
+    <div class="item1">
+        <img src="images/call.png" alt="">
+    </div>
+    <div class="item2"><strong>+8801706858088</strong></div>
 
+</div>
+<div class="contact_item">
+    <div class="item1">
+        <img src="images/call.png" alt="">
+    </div>
+    <div class="item2"><strong>+8801706858088</strong></div>
+
+</div>
+
+<div class="contact_item">
+    <div class="item1">
+        <img src="images/call.png" alt="">
+    </div>
+    <div class="item2"><strong>+8801706858088</strong></div>
+
+</div>
+
+</div>
+</section>
  
 </body>
 </html>
