Contact section correction

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </div>
 <div class="contact_item">
     <div class="item1">
-        <img src="images/call.png" alt="">
+        <img src="images/whatsapp.png" alt="">
     </div>
     <div class="item2"><strong>+8801706858088</strong></div>
 
@@ -103,9 +103,9 @@
 
 <div class="contact_item">
     <div class="item1">
-        <img src="images/call.png" alt="">
+        <img src="images/gmail.png" alt="">
     </div>
-    <div class="item2"><strong>+8801706858088</strong></div>
+    <div class="item2"><strong>mehedi8580@gmail.com</strong></div>
 
 </div>
 
